--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<h1>
-  {{title}}
-</h1>
+<navbar></navbar>
+<div class="main">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5 ">
+                <add-task></add-task>
+
+            </div>
+            <div class="col-md-7 ">
+                <router-outlet></router-outlet>
+            </div>
+        </div>
+    </div>
+</div>
+
+<h1>jehfieuFVIUwebfv</h1>
