--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,13 +7,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-            <a class="navbar-brand" href="#">myTasker</a>
+            <a class="navbar-brand" href="/">myTasker</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a routerLink="/" routerLinkActive="active">Home</a></li>
-                <li><a routerLink="/about" routerLinkActive="active">About</a></li>
+                <li><a routerLink="/about" routerLinkActive="active">Setings</a></li>
             </ul>
+            <login></login>
+            <p class="navbar-text navbar-right" *ngIf="service.curUser">Signed in as <a href="#" class="navbar-link" (click)="onLogOutUser()">
+                {{service.curUser.user.FirstName}} {{service.curUser.user.LastName}}</a>
+            </p>
         </div>
         <!--/.nav-collapse -->
     </div>
