--- a/src/app/components/task-details/task-details.component.html
+++ b/src/app/components/task-details/task-details.component.html
@@ -1,13 +1,28 @@
+<button class="btn btn-default" routerLink="/" (click)="backButtonPresed()">Back</button>
+<br>
+<br>
 <div class="jumbotron">
     <div class="container" *ngIf="service.selectedTask">
         <h2 *ngIf="service.selectedTask.TaskName">{{service.selectedTask.TaskName}}</h2>
         <p *ngIf="service.selectedTask.TaskDesc">{{service.selectedTask.TaskDesc}}</p>
+        <hr>
         <p *ngIf="service.selectedTask.autor"><strong>Author:</strong> {{service.selectedTask.autor}}</p>
+        <p *ngIf="service.selectedTask.owner"><strong>Owner:</strong> {{service.selectedTask.owner}}</p>
         <p *ngIf="service.selectedTask.DueDate"><strong>Due Date:</strong> {{service.selectedTask.DueDate | date: 'MM/dd/yy'}}</p>
-        <p>
-            <a class="btn btn-primary btn-lg">Add Note</a>
-            <a class="btn btn-danger btn-lg">Delete</a>
-            <a class="btn btn-default btn-lg">Edit</a>
-        </p>
+        <hr>
+        <ul class="nav nav-pills" role="tablist">
+            <li role="presentation"><a class="btn btn-danger btn-lg" (click)="onTaskDelete(service.selectedTask.id)" routerLink="/">Delete</a></li>
+            <li role="presentation"></li>
+            <li role="presentation">
+                <edit-task></edit-task>
+            </li>
+            <li role="presentation"></li>
+            <li role="presentation">
+                <task-addNote-button></task-addNote-button>
+            </li>
+        </ul>
+
     </div>
 </div>
+
+<task-notes></task-notes>
