--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -3,7 +3,16 @@
         <br>
         <a routerLink="taskDetails/{{task.id}}" class="list-group-item" (click)="onSelectedTask(task)">
             <h4 class="list-group-item-heading">{{task.TaskName}}</h4>
+            <hr>
             <p class="list-group-item-text" *ngIf="task.TaskDesc">{{task.TaskDesc}}</p>
+            <hr>
+            <ul class="nav nav-pills" role="tablist">
+                <li role="presentation">{{task.autor}} </li>
+                <li role="presentation"> ---> </li>
+                <li role="presentation"> {{task.owner}}</li>
+                <li role="presentation">[ Notes <span class="badge">{{task.notescnt}}</span> ]</li>
+            </ul>
         </a>
+
     </div>
 </div>
