--- a/src/app/components/task-details/task-notes/task-notes.component.html
+++ b/src/app/components/task-details/task-notes/task-notes.component.html
@@ -1,8 +1,15 @@
-<div class="row">
+<div class="row" *ngFor="let note of service.Mynotes">
     <div class="col-md-6">
-        <h3 *ngFor="let note of service.Mynotes"> {{note.NoteBody}}</h3>
+        <div *ngIf="note.CreatedBy == service.curUser.user.id">
+            <h4> {{note.NoteBody}}</h4>
+
+        </div>
+
     </div>
     <div class="col-md-6">
-        <h1> Task Notes out</h1>
+        <div *ngIf="note.CreatedBy != service.curUser.user.id">
+            <h4> {{note.NoteBody}}</h4>
+
+        </div>
     </div>
 </div>
