--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -1,18 +1,80 @@
 <div class="list-group" *ngIf="service.Mytasks">
     <div *ngFor="let task of service.Mytasks">
-        <br>
-        <a routerLink="taskDetails/{{task.id}}" class="list-group-item" (click)="onSelectedTask(task)">
-            <h4 class="list-group-item-heading">{{task.TaskName}}</h4>
-            <hr>
-            <p class="list-group-item-text" *ngIf="task.TaskDesc">{{task.TaskDesc}}</p>
-            <hr>
-            <ul class="nav nav-pills" role="tablist">
-                <li role="presentation">{{task.autor}} </li>
-                <li role="presentation"> ---> </li>
-                <li role="presentation"> {{task.owner}}</li>
-                <li role="presentation">[ Notes <span class="badge">{{task.notescnt}}</span> ]</li>
-            </ul>
-        </a>
+
+        <div *ngIf="task.IsRead == '1'">
+            <br>
+            <a routerLink="taskDetails/{{task.id}}" class="list-group-item" (click)="onSelectedTask(task)">
+                <span *ngIf="task.Status == 0"><img src="../../images/Open_now.png" width="45" height="45" alt="New" title="New Task" align="left" hspace="5" vspace="5"></span>
+                <span *ngIf="task.Status == 1"><img src="../../images/newCompleted.png" width="45" height="45" alt="New" title="New Task" align="left" hspace="5" vspace="5"></span>
+                <div>
+                    <h4 class="list-group-item-heading">{{task.TaskName}}</h4>
+                    <hr>
+                    <p class="list-group-item-text" *ngIf="task.TaskDesc">{{task.TaskDesc}}</p>
+                    <hr>
+                    <ul class="nav nav-pills" role="tablist">
+                        <li role="presentation">{{task.autor}} </li>
+                        <li role="presentation"> ---> </li>
+                        <li role="presentation"> {{task.owner}}</li>
+                        <li role="presentation">[ Notes <span class="badge">{{task.notescnt}}</span> ]</li>
+
+                    </ul>
+                </div>
+
+            </a>
+            <div class="list-group-item">
+                <ul class="nav nav-pills" role="tablist">
+                    <li role="presentation" *ngIf="task.Status == 1">
+                        <button type="button" class="btn btn-xs btn-success" (click)="taskReopen(task.id)">Reopen Task</button>
+                    </li>
+                    <li role="presentation" *ngIf="task.Status == 0">
+                        <button type="button" class="btn btn-xs btn-primary" routerLink="/" (click)="taskCompleted(task.id)">Task completed</button>
+                    </li>
+                    <li role="presentation">
+                        <button type="button" class="btn btn-xs btn-warning" *ngIf="task.notescnt == 0" (click)="deleteTask(task.id)">Delete Task</button>
+
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div *ngIf="task.IsRead == '0'">
+            <br>
+            <a routerLink="taskDetails/{{task.id}}" class="list-group-item" (click)="onSelectedTask(task)">
+                <img src="../../images/NEW.png" width="45" height="30" alt="New" title="New Task" align="right" hspace="5" vspace="5">
+                <span *ngIf="task.Status == 1"><img src="../../images/newCompleted.png" width="45" height="45" alt="New" title="New Task" align="left" hspace="5" vspace="5"></span>
+                <span *ngIf="task.Status == 0"><img src="../../images/Open_now.png" width="45" height="45" alt="New" title="New Task" align="left" hspace="5" vspace="5"></span>
+
+                <div>
+                    <h4 class="list-group-item-heading">{{task.TaskName}}</h4>
+                    <hr>
+                    <p class="list-group-item-text" *ngIf="task.TaskDesc">{{task.TaskDesc}}</p>
+                    <hr>
+                    <ul class="nav nav-pills" role="tablist">
+                        <li role="presentation">{{task.autor}} </li>
+                        <li role="presentation"> ---> </li>
+                        <li role="presentation"> {{task.owner}}</li>
+                        <li role="presentation">[ Notes <span class="badge">{{task.notescnt}}</span> ]</li>
+
+                    </ul>
+                </div>
+
+            </a>
+            <div class="list-group-item">
+                <ul class="nav nav-pills" role="tablist">
+                    <li role="presentation" *ngIf="task.Status == 1">
+                        <button type="button" class="btn btn-xs btn-success" (click)="taskReopen(task.id)">Reopen Task</button>
+                    </li>
+                    <li role="presentation" *ngIf="task.Status == 0">
+                        <button type="button" class="btn btn-xs btn-primary" routerLink="/" (click)="taskCompleted(task.id)">Task completed</button>
+                    </li>
+                    <li role="presentation">
+                        <button type="button" class="btn btn-xs btn-warning" *ngIf="task.notescnt == 0" (click)="deleteTask(task.id)">Delete Task</button>
+
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+
 
     </div>
 </div>
