--- a/src/app/components/add-task/add-task.component.html
+++ b/src/app/components/add-task/add-task.component.html
@@ -7,6 +7,7 @@
                 <input type="text" class="form-control" id="taskName" formControlName="TaskName" placeholder="add task ..">
             </div>
         </div>
+
         <div class="form-group">
             <label for="textArea" class="col-lg-2 control-label">Task Description</label>
             <div class="col-lg-10">
@@ -41,3 +42,9 @@
         </div>
     </fieldset>
 </form>
+<div>
+    <label for="text" class="col-lg-2 control-label">Search</label>
+    <div class="col-lg-10">
+        <input type="text" placeholder="search.." [(ngModel)]="user" (keyup)="onKeyUp()">
+    </div>
+</div>
